Remove usages of Commons Lang 2